qbittorrent/00-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
  namespace: p2p
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: msd117/qbittorrent:0.1.10-5.0.4-1
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        ports:
        - name: web
          containerPort: 8080
        - name: tcp-torrent
          containerPort: 6881
        - name: udp-torrent
          containerPort: 6881
          protocol: UDP
        - name: jackett
          containerPort: 9117
        volumeMounts:
        - name: dev-tun
          mountPath: /dev/net/tun
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: dev-tun
        hostPath:
          path: /dev/net/tun
      - name: config
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/kubernetes/config/qbittorrent
      - name: downloads
        persistentVolumeClaim:
          claimName: p2p-downloads
